# tauri-app-data4mysql

./: README.md  package-lock.json  package.json  tsconfig.json
public/: splashscreen.html
src/: App.vue  index.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: data4mysql.rs  main.rs
src/components/: Data4mysql.vue  Notification.vue
